releases/v0.4.1/default_bundle/assets/project_skeleton/00-项目包模板/05-项目级原型与高保真标准.md
# 项目级原型与高保真标准

| 项目 | 内容 |
|------|------|
| 文档角色 | 项目级原型 authority 与原型底座入口 |
| 文档状态 | `项目包基线 v1` |
| 负责人 | |
| 版本号 | |
| 最后更新时间 | |

## 1. 文件用途

这份文件回答：

- 当前项目原型底座入口先读哪里
- 当前项目的原型底座适用范围与复用判定结果是什么
- 当前项目的文字底座说明与底座画廊如何冻结
- 原型链下游角色进入执行或审查前必须先核对什么

## 2. 当前项目原型底座入口

| 字段 | 填写内容 |
|------|------|
| 当前项目原型底座入口 | |
| 命中终端范围 | `手机端 / PC端 / 管理后台 / 多端` |
| 当前底座状态 | `无底座则完整产出 / 有底座则复用并增量补齐 / 底座不兼容则先调整底座` |

## 3. 原型底座适用范围与复用判定结果

| 字段 | 填写内容 |
|------|------|
| 原型底座适用范围与复用判定结果 | |
| 页面壳范围 | |
| 轻量组件范围 | |
| 高频状态范围 | |
| 弱提示文案规则范围 | |

## 4. 文字底座说明

| 字段 | 填写内容 |
|------|------|
| 字体 | |
| 颜色 | |
| 字号层级 | |
| 间距 | |
| 圆角 | |
| 阴影 | |
| 弱提示文案规则 | |
| 组件清单 | |
| 页面壳清单 | |

## 5. 底座画廊

| 画廊项 | 是否齐备 | 说明 |
|------|------|------|
| 底座画廊 | `是 / 否` | |
| 按钮 | `是 / 否` | |
| 输入框 | `是 / 否` | |
| 卡片 | `是 / 否` | |
| 标签 | `是 / 否` | |
| 弹窗 / 抽屉 | `是 / 否` | |
| 空态 / 弱网 / 阻断态 | `是 / 否` | |
| 关键状态变体 | `是 / 否` | |

## 6. 联动节点入口要求

- `prototype preflight / 原型前准备` 未完成时，不得直接外推为底座可用。
- 页面合同、状态清单或结构化契约字段未冻结时，不得把缺口转嫁给原型底座阶段。
- 项目级原型 authority 与模块级 `PRD / 4.2A / 4.3 / 4.4` 发生冲突时，必须先回产品真源修正，再继续原型执行。

## 7. 下游消费清单

- `11-执行-管理后台原型专家`
- `13-执行-手机端原型专家`
- `14-执行-PC端原型专家`
- `22-审查-原型审查`
- 首次冻结原型与后续 `UI/UE执行节点`

## 8. 专题缺口清单

| 缺口项 | 当前状态 | 是否阻断 | 责任人 | 备注 |
|------|------|------|------|------|
| 专题缺口清单 | | `是 / 否` | | |

## 9. 变更说明

| 变更时间 | 变更人 | 变更摘要 |
|------|------|------|
|  |  |  |
